--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,10 +6,26 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag "https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
+    <nav class="navbar navbar-color" role="navigation" aria-label="main navigation">
+      <div class="navbar-brand ">
+        <%= link_to root_path, class:"navbar-item" do %>
+          <h1 class="title is-5 has-text-white">Photo Feed</h1>
+        <% end %>
+      </div>
+    </nav>
+    <section class="section">
+      <div class="container">
+        <div class="columns is-centered">
+          <div class="column is-10 is-centered">
+            <%= yield %>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
